# AfstudeerOpdracht-MA-IT_PuzzleSolver

./: .gitignore  Doxyfile  customServerTest.py  sockettest.py
abb_controller/: CMakeLists.txt  knownPositions.txt  package.xml
abb_controller/action/: ControlGripper.action  MoveEndEffectorStraightNoRotation.action  RotateGripper.action
abb_controller/include/: ControlGripperServer.hpp  MoveEndEffectorServer.hpp  MoveEndEffectorStraightNoRotationServer.hpp  MoveEndEffectorStraightServer.hpp  RotateGripperServer.hpp  StopRobotServer.hpp
abb_controller/src/: ControlGripperServer.cpp  MoveEndEffectorServer.cpp  MoveEndEffectorStraightNoRotationServer.cpp  MoveEndEffectorStraightServer.cpp  RotateGripperServer.cpp  StopRobotServer.cpp  main.cpp  temp.cpp
abb_controller/unittests/: GripperTest.cpp  MoveRobotNormalTest.cpp  MoveRobotStraightNoRotationTest.cpp  MoveRobotStraightTest.cpp  gtest.cpp
abb_controller_messages/: CMakeLists.txt  (+1 more)
capacitive_sensor/: CMakeLists.txt  package.xml
capacitive_sensor/include/: CapacitiveSensor.hpp
capacitive_sensor/launch/: unittests.launch
capacitive_sensor/msg/: capacitive_sensor_measurements.msg
capacitive_sensor/src/: CapacitiveSensor.cpp  main.cpp
capacitive_sensor/unittests/: capacitiveSensorTest.cpp  gtest.cpp
capacitive_sensor_simulator/: CMakeLists.txt  package.xml
capacitive_sensor_simulator/src/: CapacitiveSensor.cpp  main.cpp
custom_server_client/: CMakeLists.txt  package.xml
custom_server_client/action/: TcpIp.action
custom_server_client/include/: CustomServerClient.hpp
custom_server_client/src/: CustomServerClient.cpp  main.cpp
custom_server_client/unittests/: capacitiveSensorTest.cpp  gtest.cpp
gripper_controller/: CMakeLists.txt  package.xml
gripper_controller/include/: ControlGripperServer.hpp
gripper_controller/launch/: unittests.launch
gripper_controller/src/: ControlGripperServer.cpp  main.cpp
gripper_controller/unittests/: controlGripperTest.cpp  gtest.cpp
inductive_sensor/: CMakeLists.txt  package.xml
inductive_sensor/include/: InductiveSensor.hpp
inductive_sensor/launch/: test.launch  unittests.launch
inductive_sensor/msg/: inductive_sensor_measurements.msg
inductive_sensor/src/: InductiveSensor.cpp  main.cpp
inductive_sensor/unittests/: gtest.cpp  inductiveSensorTest.cpp
inductive_sensor/worlds/: demo.world
inductive_sensor_simulator/: CMakeLists.txt  package.xml
inductive_sensor_simulator/src/: InductiveSensor.cpp  main.cpp
main_application/: CMakeLists.txt  Doxyfile  package.xml
main_application/include/: CheckCorrectlyRotated.hpp  Context.hpp  GrabPiece.hpp  GrabUnknownPiece.hpp  Init.hpp  LiftPiece.hpp  ModelSpawner.hpp  MoveRobotClient.hpp  MoveToRecognizedPiece.hpp  MoveToUnexploredSpot.hpp  MoveToUnknownPiece.hpp  MoveUnknownPiece.hpp  PlacePiece.hpp  PlacePieceBackInPickupPoint.hpp  PlacePieceInPuzzle.hpp  Poses.hpp  PowerOff.hpp  PutPieceInPickupPoint.hpp  Puzzle.hpp  PuzzlePieceSpot.hpp  Ready.hpp  RecognizePiece.hpp  ReleasePiece.hpp  ReleaseUnknownPiece.hpp  RemovePieceFromPuzzle.hpp  RotatePiece.hpp  RotatePieceOnPlace.hpp  Shapes.hpp  State.hpp  TF2Handler.hpp  UnknownPieceInPickupPoint.hpp
main_application/include/PlaceCorrectly/: CheckCorrectlyRotated.hpp  LiftPiece.hpp  PlacePieceInPuzzle.hpp  RotatePieceInAir.hpp  RotatePieceOnPlace.hpp  SubContext.hpp  SubState.hpp
main_application/include/StateMachine/: Context.hpp  GrabPiece.hpp  Init.hpp  MoveToRecognizedPiece.hpp  MoveToUnexploredSpot.hpp  PlacePiece.hpp  PowerOff.hpp  PutPieceInPickupPoint.hpp  Ready.hpp  RecognizePiece.hpp  ReleasePiece.hpp  RemovePieceFromPuzzle.hpp  UnknownPieceInPickupPoint.hpp
main_application/launch/: physicalUnittests.launch  realrobot.launch
main_application/src/: CheckCorrectlyRotated.cpp  Context.cpp  GrabPiece.cpp  GrabUnknownPiece.cpp  Init.cpp  LiftPiece.cpp  Main.cpp  ModelSpawner.cpp  MoveRobotClient.cpp  MoveToRecognizedPiece.cpp  MoveToUnexploredSpot.cpp  MoveToUnknownPiece.cpp  MoveUnknownPiece.cpp  PlacePiece.cpp  PlacePieceBackInPickupPoint.cpp  PlacePieceInPuzzle.cpp  Poses.cpp  PowerOff.cpp  PutPieceInPickupPoint.cpp  Puzzle.cpp  PuzzlePieceSpot.cpp  Ready.cpp  RecognizePiece.cpp  ReleasePiece.cpp  ReleaseUnknownPiece.cpp  RemovePieceFromPuzzle.cpp  RotatePiece.cpp  RotatePieceOnPlace.cpp  Shapes.cpp  TF2Handler.cpp  UnknownPieceInPickupPoint.cpp  main.cpp
main_application/src/PlaceCorrectly/: CheckCorrectlyRotated.cpp  LiftPiece.cpp  PlacePieceInPuzzle.cpp  RotatePieceInAir.cpp  RotatePieceOnPlace.cpp  SubContext.cpp  SubState.cpp
main_application/src/StateMachine/: Context.cpp  GrabPiece.cpp  MoveToUnexploredSpot.cpp  MoveUnknownPiece.cpp  PowerOff.cpp  PutPieceInPickupPoint.cpp  Ready.cpp  RecognizePiece.cpp  ReleasePiece.cpp  RemovePieceFromPuzzle.cpp  State.cpp  UnknownPieceInPickupPoint.cpp
main_application/unittests/: MoveRobotTest.cpp  PuzzleTest.cpp  ShapesTest.cpp  TF2Test.cpp  gtest.cpp
pickuppoint/: CMakeLists.txt  package.xml
pickuppoint/src/: PickuppointBroadcaster.cpp
pickuppoint/stl/: lowResPickupPoint.stl  lowResPickupPointNoFrontWall.stl  ultimateLowResPickupPoint2.0.stl  ultimateLowResPickupPoint3.0.stl
pickuppoint/urdf/: pickuppoint.xacro
schunk_mpz45/: CMakeLists.txt  package.xml
schunk_mpz45/config/: config.yaml
schunk_mpz45/launch/: gripper.launch
schunk_mpz45/models/schunk_mpz45/: schunk_mpz45.config  schunk_mpz45.sdf
schunk_mpz45/stl/: SchunkGripperNoGripperCorrect.stl  SchunkSingleGripper1.stl  SchunkSingleGripper2.stl  SchunkSingleGripper3.stl
schunk_mpz45/urdf/: schunk_mpz45.urdf  schunk_mpz45_0.xacro  schunk_mpz45_macro.xacro  schunk_mpz45_macro_2.xacro  test.urdf
slider_controller/: CMakeLists.txt  package.xml
slider_controller/include/: SliderController.hpp
slider_controller/msg/: control_slider.msg
slider_controller/src/: SliderController.cpp  main.cpp
slider_controller_simulator/: CMakeLists.txt  package.xml
slider_controller_simulator/include/: ModelSpawner.hpp  SliderControllerSimulator.hpp
slider_controller_simulator/src/: ModelSpawner.cpp  SliderControllerSimulator.cpp
(+169 files in other folders)
