<?xml version="1.0"?>
<package format="2">
  <name>pickuppoint</name>
  <version>1.0.0</version>
  <description>
    <p>
      This package contains urdf files for the pickuppoint.
    </p>
    
  </description>
  <maintainer email="martijn@todo.todo">martijn</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

</package>
